--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -34,6 +34,9 @@
 
 					</div>
 				</div>
+				<div class="row text-center">
+					<button type="button" id="start">Start</button>
+				</div>
 			</div>
 		</div>
 	</body>
