--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -62,7 +62,7 @@
 					</div>
 					<div class="row">
 						<div class="text-center">
-							<button type="button" class="btnNum" id="1" value="1">1</button>
+							<button type="button" class="btnNum" id="1" name="one" value="1">1</button>
 							<button type="button" class="btnNum" id="2" value="2">2</button>
 							<button type="button" class="btnNum" id="3" value="3">3</button>
 							<button type="button" class="btnOp"  id="btnSubtract" value="-">-</button>
