--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<!-- <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
+		<!-- <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">-->
 
 		
@@ -23,16 +23,19 @@
 			<div class="container">
 				<div class="row text-center">
 					<h1>Free Code Camp</h1>
-					<h2>Pomodoro Timer</h2>
+					<h2>Pomodoro Clock</h2>
 				</div>
 				<div class="row text-center">
-					<div class="ext-center"><i class="fa fa-plus" aria-hidden="true"></i><div id="workTimer"></div><i class="fa fa-minus" aria-hidden="true"></i></div>
+					<div class="text-center"><a id="addWorkTime" class="btn" href="#"><i class="fa fa-plus fa-5x" aria-hidden="true"></i></a><div id="workTimer"></div><a id="subWorkTime" class="btn" href="#"><i class="fa fa-minus fa-5x" aria-hidden="true"></i></a></div>
 				</div>
 				<div class="row text-center">
-					<div class="ext-center"><i class="fa fa-plus" aria-hidden="true"></i><div id="breakTimer"></div><i class="fa fa-minus" aria-hidden="true"></i></div>
+					<div class="text-center"><a id="addBreak" class="btn" href="#"><i class="fa fa-plus fa-5x" aria-hidden="true"></i></a><div id="breakTimer"></div><a id="subBreak" class="btn" href="#"><i class="fa fa-minus fa-5x" aria-hidden="true"></i></a></div>
 				</div>
 				<div class="row text-center">
-					<button type="button" id="start">Start</button> <button type="button" id="stop">Stop</button>
+					<button type="button" id="start">Start</button> <button type="button" id="stop">Stop</button> 
+				</div>
+				<div class="row text-center">
+					<button type="button" id="reset">Reset</button>
 				</div>
 			</div>
 		</div>
