--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -10,11 +10,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
-		<!-- <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">-->
-
-		
+		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 
 	</head>
 
@@ -26,16 +23,16 @@
 					<h2>Pomodoro Clock</h2>
 				</div>
 				<div class="row text-center">
-					<div class="text-center"><a id="addWorkTime" class="btn" href="#"><i class="fa fa-plus fa-5x" aria-hidden="true"></i></a><div id="workTimer"></div><a id="subWorkTime" class="btn" href="#"><i class="fa fa-minus fa-5x" aria-hidden="true"></i></a></div>
+					<div class="text-center"><a id="addWorkTime" class="btn" href="#"><i class="fa fa-plus fa-5x" aria-hidden="true"></i></a><div id="workTimer" class="time"></div><a id="subWorkTime" class="btn" href="#"><i class="fa fa-minus fa-5x" aria-hidden="true"></i></a></div>
 				</div>
 				<div class="row text-center">
-					<div class="text-center"><a id="addBreak" class="btn" href="#"><i class="fa fa-plus fa-5x" aria-hidden="true"></i></a><div id="breakTimer"></div><a id="subBreak" class="btn" href="#"><i class="fa fa-minus fa-5x" aria-hidden="true"></i></a></div>
+					<div class="text-center"><a id="addBreak" class="btn" href="#"><i class="fa fa-plus fa-5x" aria-hidden="true"></i></a><div id="breakTimer" class="time"></div><a id="subBreak" class="btn" href="#"><i class="fa fa-minus fa-5x" aria-hidden="true"></i></a></div>
 				</div>
 				<div class="row text-center">
-					<button type="button" id="start">Start</button> <button type="button" id="stop">Stop</button> 
+					<button type="button" id="start">Start</button> <button type="button" id="stop">Stop</button> <button type="button" id="reset">Reset</button>
 				</div>
 				<div class="row text-center">
-					<button type="button" id="reset">Reset</button>
+					<audio id="airhorn" src="sounds/airhorn.mp3" type="audio/mp3"></audio> 
 				</div>
 			</div>
 		</div>
