Fixed footer issue.

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -12,8 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	</head>
 
@@ -62,7 +61,7 @@
 					</div>
 					<div class="row">
 						<div class="text-center">
-							<button type="button" class="btnNum" id="1" name="one" value="1">1</button>
+							<button type="button" class="btnNum" id="1" name="1" value="1">1</button>
 							<button type="button" class="btnNum" id="2" value="2">2</button>
 							<button type="button" class="btnNum" id="3" value="3">3</button>
 							<button type="button" class="btnOp"  id="btnSubtract" value="-">-</button>
