--- a/twitch-viewer/index.html
+++ b/twitch-viewer/index.html
@@ -8,6 +8,7 @@
     <script src="script/script.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="wrap">
