--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	</head>
 
