--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p>Web Development &#9670; Database &#9670; Support Excellence</p>
         </div>
         <div class="col-sm-4">
-        <img src="http://res.cloudinary.com/dyo5s2fnz/image/upload/c_scale,w_200/v1472306482/image_kvlcmn.jpg" class="img-responsive" id="tim"/>
+        <img src="images/timevearitt1.jpg" class="img-responsive" id="tim"/>
         </div>
       </div>
 
@@ -41,7 +41,7 @@
         <div class="col-sm-6">
           <figure>
             <a href="tribute" class="thumbnail" target="_blank">
-              <img src="http://res.cloudinary.com/dyo5s2fnz/image/upload/v1471903862/314047_3704865055124_2050166991_n_cinmss.jpg" class="img-responsive center-block" id="ruxin-image" alt="A warm deck is Ruxin's favorite place to relax."/>
+              <img src="images/ruxin.jpg" class="img-responsive center-block" alt="A warm deck is Ruxin's favorite place to relax."/>
             </a>
             <figcaption class="text-center">Bulldog Tribute Page</figcaption>
           </figure>
@@ -49,7 +49,7 @@
         <div class="col-sm-6">
           <figure>
             <a href="weather" class="thumbnail" target="_blank">
-              <img src="http://res.cloudinary.com/dyo5s2fnz/image/upload/c_scale,h_482,w_960/v1483995049/tornado-565330_pfppg8.jpg" id="ruxin-image" alt="PLACEHOLDER"/>
+              <img src="images/weather.png" class="img-responsive center-block" alt="weather app"/>
             </a>
             <figcaption class="text-center">Local Weather</figcaption>
           </figure>
@@ -59,18 +59,18 @@
       <div class="row">
         <div class="col-sm-6">
           <figure>
-            <a href="http://codepen.io/tevearitt/full/vXRqLA/" class="thumbnail" target="_blank">
-              <img src="http://res.cloudinary.com/dyo5s2fnz/image/upload/v1484061515/Screen_Shot_2017-01-10_at_8.16.18_AM_xhsjpr.png" id="ruxin-image" alt="PLACEHOLDER"/>
+            <a href="quote-generator" class="thumbnail" target="_blank">
+              <img src="images/quotes.png" class="img-responsive center-block" alt="Gridiron Quotes"/>
             </a>
             <figcaption class="text-center">Gridiron Quote Generator</figcaption>
           </figure>
         </div>
         <div class="col-sm-6">
           <figure>
-            <a href="#" class="thumbnail" target="_blank">
-              <img src="http://fpoimg.com/960x482?text=Coming Soon!&bg_color=afb2b7&text_color=262526" id="ruxin-image" alt="PLACEHOLDER"/>
+            <a href="pomodoro" class="thumbnail" target="_blank">
+              <img src="images/pomodoro.png" alt="Pomodoro"/>
             </a>
-            <figcaption class="text-center">Placeholder</figcaption>
+            <figcaption class="text-center">Pomodoro Clock</figcaption>
           </figure>
         </div>
       </div>
@@ -78,18 +78,18 @@
       <div class="row">
         <div class="col-sm-6">
           <figure>
-            <a href="#" class="thumbnail" target="_blank">
-              <img src="http://fpoimg.com/960x482?text=Coming Soon!&bg_color=afb2b7&text_color=262526" id="ruxin-image" alt="PLACEHOLDER"/>
+            <a href="calculator" class="thumbnail" target="_blank">
+              <img src="images/calculator.png" alt="Calculator"/>
             </a>
-            <figcaption class="text-center">Placeholder</figcaption>
+            <figcaption class="text-center">Calculator</figcaption>
           </figure>
         </div>
         <div class="col-sm-6">
           <figure>
-            <a href="#" class="thumbnail" target="_blank">
-              <img src="http://fpoimg.com/960x482?text=Coming Soon!&bg_color=afb2b7&text_color=262526" id="ruxin-image" alt="PLACEHOLDER"/>
+            <a href="twitch-viewer" class="thumbnail" target="_blank">
+              <img src="images/twitch.png" alt="Twitch"/>
             </a>
-            <figcaption class="text-center">Placeholder</figcaption>
+            <figcaption class="text-center">Twitch User Status</figcaption>
           </figure>
         </div>
       </div>
