migrating images from cloudinary.

--- a/tribute/index.html
+++ b/tribute/index.html
@@ -17,7 +17,7 @@
 			<h1 class="text-center">Ruxin - The English Bulldog</h1> 
 	 		<div class="row">
 	   			<figure>
-	  				<img src="http://res.cloudinary.com/dyo5s2fnz/image/upload/v1471903862/314047_3704865055124_2050166991_n_cinmss.jpg" class="img-responsive center-block" id="ruxin-image" alt="A warm deck is Ruxin's favorite place to relax."/>
+	  				<img src="../images/ruxin.jpg" class="img-responsive center-block" id="ruxin-image" alt="A warm deck is Ruxin's favorite place to relax."/>
 	     			<figcaption class="text-center">A warm deck is Ruxin's favorite place to relax and take a nap.</figcaption>
 	   			</figure>
 	  		</div>
