optimize main portfolio and text change to tribute page.

--- a/tribute/index.html
+++ b/tribute/index.html
@@ -22,7 +22,7 @@
 	   			</figure>
 	  		</div>
 	 		<div class="row"> 
-	   			<p>Ruxin was born on April 22, 2012 in Michigan.  He is the son of Tony the Tiger and Sugar Bear.  His hobbies include taunting his human parents with tennis balls and interrupting fetch games by standing on the frisbee.  He also enjoys stopping to take a seat mid-walk.  Ruxin is currently enjoying life from beautiful sunny Colorado.</p>
+	   			<p>Ruxin was born on April 22, 2012 in Michigan.  He is the son of Tony the Tiger and Sugar Bear.  His hobbies include taunting his human parents with tennis balls and interrupting fetch games by standing on the frisbee.  He also enjoys stopping to take a seat mid-walk.  Ruxin is currently enjoying life from beautiful, sunny Colorado.</p>
 	   			<div class="row">
 	    			<div class="col-xs-6">
 	     				<h2 class="text-center">Loves</h3>
