tic tac toe updates

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -24,19 +24,19 @@
 				<div class="row text-center" id="board">
 				    <table class="table">
 				      <tr id="row1">
-				        <td id="four" value="4" class="square top">x</td>
-				        <td id="nine" value="9" class="square v top">o</td>
-				        <td id="two" value="2" class="square top">x</td>
+				        <td id="00" value="4" class="square top"></td>
+				        <td id="01" value="9" class="square v top"></td>
+				        <td id="02" value="2" class="square top"></td>
 				      </tr>
 				      <tr id="row2">
-				        <td id="three" value="3" class="square h">x</td>
-				        <td id="five" value="5" class="square v h">o</td>
-				        <td id="seven" value="7" class="square h">x</td>
+				        <td id="10" value="3" class="square h"></td>
+				        <td id="11" value="5" class="square v h"></td>
+				        <td id="12" value="7" class="square h"></td>
 				      </tr>
 				      <tr id="row3">
-				        <td id="eight" value="8" class="square">o</td>
-				        <td id="one" value="1" class="square v">x</td>
-				        <td id="six" value="6" class="square">o</td>
+				        <td id="20" value="8" class="square"></td>
+				        <td id="21" value="1" class="square v"></td>
+				        <td id="22" value="6" class="square"></td>
 				      </tr>
 				    </table>
 				</div>
