refactoring tic tac toe

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -40,7 +40,7 @@
 				      </tr>
 				    </table>
 				</div>
-				<div id="xoro" class="row text-center">
+				<div id="info" class="row text-center">
 					<button type="button" id="X">X</button> OR <button type="button" id="O">O</button>
 				</div>
 			</div>
