Working on tic tac toe game refresh logic.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -40,8 +40,11 @@
 				      </tr>
 				    </table>
 				</div>
-				<div id="info" class="row text-center">
+				<div id="selectToken" class="row text-center">
 					<button type="button" id="X">X</button> OR <button type="button" id="O">O</button>
+				</div>
+				<div id="info" class="row text-center">
+					<button type='button' id='rematch'>Rematch</button>
 				</div>
 			</div>
 		</div>
