--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -40,12 +40,17 @@
 				      </tr>
 				    </table>
 				</div>
+				<div id="winner" class="row text-center">
+					Select Your Token!
+				</div>
 				<div id="selectToken" class="row text-center">
 					<button type="button" id="X">X</button> OR <button type="button" id="O">O</button>
 				</div>
+				
 				<div id="info" class="row text-center">
-					<button type='button' id='rematch'>Rematch</button>
+					<button type='button' id='rematch'>Rematch?</button>
 				</div>
+
 			</div>
 		</div>
 	</body>
