Updating portfolio pages based on mobile specific testing.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,14 @@
       </div>
       <!-- PORTFOLIO ROW SOCIAL -->
       <div class="row">
-        <div class="col-xs-12 text-center">
+        <div class="visible-xs text-center">
+          <a href="https://www.linkedin.com/in/timevearitt" target="_blank">
+            <i class="fa fa-linkedin fa-3x social"></i></a>
+          <a href="https://twitter.com/timevearitt" target="_blank">
+            <i class="fa fa-twitter fa-3x social" aria-hidden="true"></i></a>
+          <a href="https://github.com/timevearitt" target="_blank"><i class="fa fa-github fa-3x social" aria-hidden="true"></i></a>
+        </div>
+        <div class="hidden-xs col-sm-12 text-center">
           <a href="https://www.linkedin.com/in/timevearitt" target="_blank">
             <i class="fa fa-linkedin fa-5x social"></i></a>
           <a href="https://twitter.com/timevearitt" target="_blank">
