--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -42,7 +42,7 @@
   <footer class="text-center">
     Coded & Designed by Tim Evearitt &copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> </br>
     <a href="https://www.linkedin.com/in/timevearitt" class="btn btn-social-icon btn-linkedin btn-xs" id="linkedin" target="_blank">
-      <span class="fa fa-linkedin"></span>
+      <span class="fa fa-linkedin fa-3x"></span>
     </a>
   </footer>
 </html>
