--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -3,14 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Free Code Camp - Tic Tac Toe</title>
-
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="scripts/script.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-
-		
 
 	</head>
 
@@ -56,6 +53,20 @@
 	</body>
 
 	<footer class="text-center footer">
+		<div class="visible-xs text-center">
+          <a href="https://www.linkedin.com/in/timevearitt" target="_blank">
+            <i class="fa fa-linkedin fa-2x social"></i></a>
+          <a href="https://twitter.com/timevearitt" target="_blank">
+            <i class="fa fa-twitter fa-2x social" aria-hidden="true"></i></a>
+          <a href="https://github.com/timevearitt" target="_blank"><i class="fa fa-github fa-2x social" aria-hidden="true"></i></a>
+        </div>
+		<div class="hidden-xs col-sm-12 text-center">
+          <a href="https://www.linkedin.com/in/timevearitt" target="_blank">
+            <i class="fa fa-linkedin fa-3x social"></i></a>
+          <a href="https://twitter.com/timevearitt" target="_blank">
+            <i class="fa fa-twitter fa-3x social" aria-hidden="true"></i></a>
+          <a href="https://github.com/timevearitt" target="_blank"><i class="fa fa-github fa-3x social" aria-hidden="true"></i></a>
+        </div>
 	  Coded & Designed by Tim Evearitt &copy;<script type="text/javascript">document.write(new Date().getFullYear());</script></br>
 	</footer>
 
