Update score board and add title to tic tac toe.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -14,9 +14,19 @@
 	<body>
 		<div id="wrap">
 			<div id="main" class="container">
-
+				<div class="row text-center"><h1>Tic Tac Toe</h1></div>
 				<div id="score" class="row text-center">
-					PLAYER: 0 - AI: 0
+					<div class="col-xs-1"></div>
+					<div id="playerScore" class="scoreBox col-xs-4"> 
+						PLAYER</br>
+						0 
+					</div>
+					<div class="col-xs-2"></div>
+					<div id="aiScore" class="scoreBox col-xs-4"> 
+						CPU</br>
+						0 
+					</div>
+					<div class="col-xs-1"></div>
 				</div>
 				<div class="row text-center" id="board">
 				    <table class="table .table-responsive">
