Updating simon css.

--- a/simon/index.html
+++ b/simon/index.html
@@ -23,9 +23,17 @@
 				<div id="simon">
 					<div id="namePlate" >
 						<div id="nameText" class="text-center">SIMON</div>
-						<div id="start"><button type"button" id="btnStart"></button></div>
+						<div id="count" class="text-center">01</div>
+						<div id="start" class="text-center">
+							Start<br/>
+							<button type"button" id="btnStart"></button>
+						</div>
+						<div id="strict" class="text-center">
+							Strict<br/>
+							<button type"button" id="btnStrict"></button>
+							<div id="strictLight"></div>
+						</div>
 					</div>
-					
 				</div>
 			</div>
 		</div>
