--- a/simon/index.html
+++ b/simon/index.html
@@ -21,6 +21,11 @@
 		<div id="wrap">
 			<div class="container-fluid">
 				<div id="simon">
+					<button type="button" id="green" class="color"></button>
+					<button type="button" id="red" class="color"></button>
+					<button type="button" id="yellow" class="color"></button>
+					<button type="button" id="blue" class="color"></button>
+
 					<div id="namePlate" >
 						<div id="nameText" class="text-center">SIMON</div>
 						<div id="count" class="text-center">01</div>
@@ -32,6 +37,9 @@
 							Strict<br/>
 							<button type"button" id="btnStrict"></button>
 							<div id="strictLight"></div>
+						</div>
+						<div id="power" class="text-center">
+							<i class="fa fa-power-off fa-2x" aria-hidden="true"></i>
 						</div>
 					</div>
 				</div>
