Simon lighting logic.

--- a/simon/index.html
+++ b/simon/index.html
@@ -5,7 +5,7 @@
 		<title>Free Code Camp - Simon</title>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="scripts/jquery.js"></script>
+		<script src="script/jquery.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
@@ -28,7 +28,7 @@
 
 					<div id="namePlate" >
 						<div id="nameText" class="text-center">SIMON</div>
-						<div id="count" class="text-center">01</div>
+						<div id="round" class="text-center"></div>
 						<div id="start" class="text-center">
 							Start<br/>
 							<button type"button" id="btnStart"></button>
